--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
   },
   "dependencies": {
     "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
     "express": "~4.16.0",
-    "morgan": "~1.9.0"
+    "http-status": "^1.3.1",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.0",
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
